public/css/main.css
* {
    margin-bottom: 0;
}
html {
   min-height: 100%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
    font-size: 16px;
    line-height: 1.3;
}

h2 {
    margin: 0;
    font-weight: 500;
    font-size: 20px;
}

h3 {
    font-size: 16px;
    text-align: center;
    font-weight: 500;
    margin: 1em;
}

.back-button {
    margin: 1em;
}

.mg-top {
    margin-top: 1em;
}

#season-selector label {
    font-size: 1.3rem;
}

#season-selector select {
    font-size: 1rem;
}

/* .wrapper {
    width: 100%;
    overflow: auto hidden; // we need "hidden" to avoid vertical scrollbar showing due to space left between table element and div.wrapper
} */

.wrapper-chart {
    margin: 1rem 0.5rem;
    width: calc(100% - 1rem);
}

.details {
    margin: 1em;
    font-size: 18px;

    & td {
        padding: 0 1em 0 0;
    }
}

.first-place:after,
.first-place.before:before {
    content: '🥇';
    display: inline-block;
}

.second-place:after,
.second-place.before:before {
    content: '🥈';
    display: inline-block;
}

.third-place:after,
.third-place.before:before {
    content: '🥉';
    display: inline-block;
}

.first-place.before:after,
.second-place.before:after,
.third-place.before:after {
    content: none;
}

.table-results {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #1d5410;
    color: white;
    border-collapse: collapse;
    width: 100%;

    & tr:nth-child(even) td {
        background: #36701e;
    }

    th {
        padding: 10px 10px 10px 0;
        text-align: left;
    }

    th.date {
        min-width: 110px;
    }

    tr:first-child {
        position: sticky;
        top: 0;
        background-color: #1d5410;
    }

    th {
        padding-top: 1em;
        padding-bottom: 1em;
    }

    td {
        padding: 0 10px 0 0;
        text-align: left;
        font-size: 1.1em;
    }

    td:first-child,
    th:first-child {
        padding-left: 10px;
    }

    td a, td.name span {
        padding: 0.8em 0.5em 0.8em 0;
        display: inline-block;

        @media (min-width: 1024px) {
            padding: 0.5em 0;
        }
    }

    td a {
        color: #ECE18F;
    }

    td a:visited {
        color: yellowgreen;
    }

    td.name {
        text-transform: capitalize;
    }

    td.name .game-status {
        white-space: nowrap;
    }
}

ul {
    margin: 1em;
    padding: 0;
}

.loader {
    display: block;
    margin: 0 auto;
    width: 50px;
    height: 50px;
    margin: 5px;
}

@keyframes loadingspin {
    100% {
        transform: rotate(360deg)
    }
}

#results.empty {
    min-height: 100%;
    display: flex;

    /* loader */
    &::before {
        content: "";
        width: 2em;
        height: 2em;
        margin: auto;
        border: 0.2em solid #555;
        display: block;
        border-top-color: transparent;
        border-radius: 50%;
        animation: loadingspin 1s linear infinite;
        text-align: center;
    }
}

@keyframes slideInLTR {
    from {
        transform: translateX(-100vw);
        opacity: 0;
    }
    to {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes slideInRTL {
    from {
        transform: translateX(100vw);
        opacity: 0;
    }
    to {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

#results.slideInLTR {
    animation: slideInLTR 0.2s;
    animation-fill-mode: both;
    animation-timing-function: ease-out;
}

#results.slideInRTL {
    animation: slideInRTL 0.2s;
    animation-fill-mode: both;
    animation-timing-function: ease-out;
}

#results.fadeIn {
    animation: fadeIn 0.2s;
    animation-fill-mode: both;
    animation-timing-function: ease-out;
}

@keyframes blinking {
    from, to {
      opacity: 0;
    }
    40% {
      opacity: 1;
    }
}

.status {
    padding: 0 !important;
    display: inline-block;
    border-radius: 50%;
    width: 10px;
    height: 10px;
    background: #1D5410;
    vertical-align: middle;
    margin-right: 0;
    opacity: 0;
}

.pending {
    display: inline-block;
    border-radius: 50%;
    width: 1rem;
    height: 1rem;
    background: rgb(193, 241, 122);
    vertical-align: baseline;
    margin-right: 0.25rem;
    animation: 1.5s blinking ease infinite;
}

.status.pending {
    margin-right: 0.15rem;
    width: 0.75rem;
    height: 0.75rem;
    opacity: 1;
}

